--- a/pages/goods/goods.wxml
+++ b/pages/goods/goods.wxml
@@ -1,15 +1,15 @@
 <!--goods.wxml-->
-<!-- banner -->
-<swiper indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}">
-  <block wx:for="{{imgUrls}}">
-    <swiper-item>
-      <image src="{{item}}" data-src="{{item}}" bindtap="previewImage"></image>
-    </swiper-item>
-  </block>
-</swiper>
+
 
 
 <scroll-view scroll-y="true">
+  <swiper indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}">
+    <block wx:for="{{imgUrls}}">
+      <swiper-item>
+        <image src="{{item}}" data-src="{{item}}" bindtap="previewImage" mode="widthFix"></image>
+      </swiper-item>
+    </block>
+  </swiper>
   <view class="detail">
     <text class="name">{{name}}</text>
     <text class="price">￥{{price}}</text>
@@ -43,9 +43,9 @@
 
 <!-- 底部悬浮栏 -->
 <view class="detail-nav">
-  <image bindtap="toCar" src="../demo/image/wang_light.png" />
+  <image bindtap="addLike"  src="../demo/image/wang_light.png"/>
   <view class="line_nav"></view>
-  <image bindtap="addLike" src="{{isLike?'../demo/image/cart.png':'../../images/detail/detail_btn_mark_normal.png'}}" />
+  <image bindtap="toCar" src="../demo/image/cart.png" />
   <button class="button-green" bindtap="addCar" formType="submit">加入购物车</button>
   <button class="button-red" bindtap="immeBuy" formType="submit">立即购买</button>
 </view>
